feat: added rest to websocket endpoint
